objects/TreatmentJourneySteps__mdt/TreatmentJourneySteps__mdt.object-meta.xml
<CustomObject>
    <label>Treatment Journey Steps</label>
    <pluralLabel>Treatment Journey Steps</pluralLabel>
</CustomObject>