objects/TreatmentJourneySteps__mdt/fields/ApheresisCompleted__c.field-meta.xml
<CustomField>
    <fullName>ApheresisCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate the Apheresis Section progress as Completed or Active in Treatment Journey Screen</description>
    <label>Apheresis Completed</label>
    <type>Checkbox</type>
</CustomField>