objects/TreatmentJourneySteps__mdt/fields/ApheresisPickUpSectionStatus__c.field-meta.xml
<CustomField>
    <fullName>ApheresisPickUpSectionStatus__c</fullName>
    <description>To populate the corresponding Apheresis Section Status based on Order, Care Plan, PO and Slot statuses in Treatment Journey Screen</description>
    <label>Apheresis Pick-Up Section Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>