objects/TreatmentJourneySteps__mdt/fields/CarePlanStatus__c.field-meta.xml
<CustomField>
    <fullName>CarePlanStatus__c</fullName>
    <description>To store Care Plan Status as per matrix for comparison with the Care Plan Status of the Patient in Treatment Journey Screen</description>
    <label>Care Plan Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>