objects/TreatmentJourneySteps__mdt/fields/DeliveryCompleted__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Completed</label>
    <type>Checkbox</type>
</CustomField>