objects/TreatmentJourneySteps__mdt/fields/DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStatus__c</fullName>
    <label>Delivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>