objects/TreatmentJourneySteps__mdt/fields/InfusionCompleted__c.field-meta.xml
<CustomField>
    <fullName>InfusionCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infusion Completed</label>
    <type>Checkbox</type>
</CustomField>