objects/TreatmentJourneySteps__mdt/fields/InfusionStatus__c.field-meta.xml
<CustomField>
    <fullName>InfusionStatus__c</fullName>
    <label>Infusion Status</label>
    <length>127</length>
    <type>Text</type>
</CustomField>