objects/TreatmentJourneySteps__mdt/fields/ManufacturingCompleted__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate the Manufacturing Section progress as Completed or Active in Treatment Journey Screen</description>
    <label>Manufacturing Completed</label>
    <type>Checkbox</type>
</CustomField>