objects/TreatmentJourneySteps__mdt/fields/ManufacturingStatus__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingStatus__c</fullName>
    <description>To store Manufacturing Status as per matrix.</description>
    <label>Manufacturing Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>