objects/TreatmentJourneySteps__mdt/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <description>To store Order Status as per matrix for comparison with the Order Status of the Patient in Treatment Journey Screen</description>
    <label>Order Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>