objects/TreatmentJourneySteps__mdt/fields/POStatus__c.field-meta.xml
<CustomField>
    <fullName>POStatus__c</fullName>
    <description>To store PO Status as per matrix for comparison with the PO Status of the Patients Order in Treatment Journey Screen</description>
    <label>PO Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>