objects/TreatmentJourneySteps__mdt/fields/SectionName__c.field-meta.xml
<CustomField>
    <fullName>SectionName__c</fullName>
    <description>To store corresponding Section Name in Treatment Journey Screen</description>
    <label>Section Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>