objects/TreatmentJourneySteps__mdt/fields/ShippingCompleted__c.field-meta.xml
<CustomField>
    <fullName>ShippingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate the Shipping Section progress as Completed or Active in Treatment Journey Screen</description>
    <label>Shipping Completed</label>
    <type>Checkbox</type>
</CustomField>