objects/TreatmentJourneySteps__mdt/fields/ShippingStatus__c.field-meta.xml
<CustomField>
    <fullName>ShippingStatus__c</fullName>
    <description>To populate the corresponding Shipping Section Status based on Order, Care Plan, PO and Slot statuses in Treatment Journey Screen</description>
    <label>Shipping Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>