objects/TreatmentJourneySteps__mdt/fields/SlotStatus__c.field-meta.xml
<CustomField>
    <fullName>SlotStatus__c</fullName>
    <description>To store Slot Status as per matrix for comparison with the Slot Status of the Patients Order in Treatment Journey Screen</description>
    <label>Slot Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>